--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ baseurl: "" # The subpath of your site. Use "" if you're hosting a blog at the r
 url: "linucc.github.io" # the base hostname & protocol for your site.
 title: "LinuCC's Sandbox"
 
+markdown: kramdown
 
 paginate: 3 #articles per page
 paginate_path: /blog/page:num #makes pagination working
